[package]
name = "wake-neighbor"
version = "0.1.0"
edition = "2021"
authors = ["Whoemoon Jang <palindrom615@gmail.com>"]
license ="MIT OR Apache-2.0"
description = "Simple tool for easy wake-on-lan"
readme = "README.md"
homepage = "https://github.com/palindrom615/wake-neighbor"
repository = "https://github.com/palindrom615/wake-neighbor"
keywords = ["cli", "wol"]
categories = ["command-line-utilities"]

[[bin]]
name = 'wol'
path = 'src/main.rs'

[dependencies]
log = "0.4"
env_logger = "0.9.1"
pnet = { version = "0.31.0", features = ["default", "std"] }
